Validation form user and flash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <% flash.each do |it,it1| %>
+        <h2 align="center"><%= it1 %></h2>
+    <% end %>
     <%= yield %>
   </body>
 </html>
