--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,16 @@
 <h1>Creating New Article</h1>
 
+<% if @article.errors.any? %>
+    <h2>The entry can not be saved due to the following errors:</h2>
+    <ul>
+        <% @article.errors.full_messages.each do |it| %>
+            <li><%= it %></li>
+        <% end %>
+    </ul>
+<% end %>
+
+
+
 <%= form_with scope: :article, url: articles_path, local: true do |f| %>
 
     <p>
