--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,7 +1,7 @@
-<h1>Creating New Article</h1>
+<h1>Edit Article</h1>
 
 <% if @article.errors.any? %>
-    <h2>The entry can not be saved due to the following errors:</h2>
+    <h2>The entry can not be updated due to the following errors:</h2>
     <ul>
         <% @article.errors.full_messages.each do |it| %>
             <li><%= it %></li>
@@ -11,7 +11,7 @@
 
 
 
-<%= form_with scope: :article, url: articles_path, local: true do |f| %>
+<%= form_with(model:@article, local: true) do |f| %>
 
     <p>
         <%= f.label :title %><br>
@@ -28,5 +28,4 @@
     </p>
     
 <% end %>
-
 <%= link_to 'Back to Article Index', articles_path %></td>
