--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,8 +12,13 @@
             <tr>
                 <td><%= it.title%></td>
                 <td><%= it.description%></td>
-                <td>Placeholder</td>
+                <td><%= link_to 'Show', article_path(it) %></td>
+                <td><%= link_to 'Edit', edit_article_path(it) %></td>
+                <td><%= link_to 'Delete', article_path(it), method: :delete %></td>
             </tr>
         <% end %>
     </tbody>
 </table>
+
+<br>
+<%= link_to 'Create New User', new_article_path %></td>
