--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,7 @@
 
 <p><strong>Title: </strong><%= @article.title %></p>
 <p><strong>Description: </strong><%= @article.description %></p>
+
+<br>
+<%= link_to 'Edit', edit_article_path(@article) %> | 
+<%= link_to 'Back to Article Index', articles_path %></td>
